--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ APP_SECRET=efe9ec982ab18a4a2334aec6074f3a6d
 DATABASE_URL="mysql://root:@127.0.0.1:3306/smartfood_prod?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
