--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.9",
+        "friendsofsymfony/ckeditor-bundle": "^2.4",
+        "nelmio/cors-bundle": "^2.3",
+        "nyholm/psr7": "^1.5",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "6.2.*",
         "symfony/console": "^6.2",
@@ -19,6 +22,7 @@
         "symfony/flex": "^1.17|^2",
         "symfony/form": "^6.2",
         "symfony/framework-bundle": "^6.2",
+        "symfony/http-client": "^6.2",
         "symfony/maker-bundle": "^1.48",
         "symfony/mime": "6.2.*",
         "symfony/runtime": "^6.2",
@@ -59,7 +63,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "ckeditor:install": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -73,7 +78,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "6.2.*"
         }
     }
