--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     image_directory: '%kernel.project_dir%/public/uploads/products'
+    image_category: '%kernel.project_dir%/public/uploads/categories'
 
 services:
     # default configuration for services in *this* file
