--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.9",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
+        "lexik/jwt-authentication-bundle": "^2.18",
         "nelmio/cors-bundle": "^2.3",
         "nyholm/psr7": "^1.5",
         "sensio/framework-extra-bundle": "^6.2",
@@ -20,17 +21,19 @@
         "symfony/console": "^6.2",
         "symfony/dotenv": "^6.2",
         "symfony/flex": "^1.17|^2",
-        "symfony/form": "^6.2",
+        "symfony/form": "6.2.*",
         "symfony/framework-bundle": "^6.2",
         "symfony/http-client": "^6.2",
+        "symfony/mailer": "6.2.*",
         "symfony/maker-bundle": "^1.48",
         "symfony/mime": "6.2.*",
         "symfony/runtime": "^6.2",
-        "symfony/security-bundle": "6.2",
-        "symfony/security-csrf": "^6.2",
-        "symfony/twig-bundle": "^6.2",
-        "symfony/validator": "^6.2",
-        "symfony/yaml": "^6.2"
+        "symfony/security-bundle": "6.2.*",
+        "symfony/security-csrf": "6.2.*",
+        "symfony/twig-bundle": "6.2.*",
+        "symfony/validator": "6.2.*",
+        "symfony/yaml": "^6.2",
+        "symfonycasts/verify-email-bundle": "^1.13"
     },
     "config": {
         "allow-plugins": {
@@ -81,5 +84,9 @@
             "allow-contrib": true,
             "require": "6.2.*"
         }
+    },
+    "require-dev": {
+        "symfony/stopwatch": "6.2.*",
+        "symfony/web-profiler-bundle": "6.2.*"
     }
 }
