--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,11 +1,11 @@
 nelmio_cors:
     defaults:
-        allow_credentials: false
-        allow_origin: []
+        allow_credentials: true
+        allow_origin: ['*']
         allow_headers: []
         allow_methods: []
         expose_headers: []
-        max_age: 0
+        max_age: 42300
         hosts: []
         origin_regex: false
         forced_allow_origin_value: ~
