--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,12 @@
 security:
-    
-
+    enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_ADMIN, ROLE_USER, ROLE_CLIENTS]
+        ROLE_USER: [ROLE_USER]
+        ROLE_CLIENTS: [ROLE_CLIENTS]
+
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
@@ -12,17 +17,29 @@ security:
                 class: App\Entity\User
                 property: email
     firewalls:
+
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        api:
+            pattern:   ^/api
+            stateless: true
+            jwt: ~
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\LoginFormAuthenticator
+            custom_authenticator: App\Security\AppCustomAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
-                # target: app_any_route
+                target: app_login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -34,9 +51,20 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/register, roles: ROLE_ADMIN}
+        - { path: ^/api/test, roles: ROLE_ADMIN }
+        - { path: ^/home, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/clients, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/clients/new, roles: ROLE_ADMIN }
+        - { path: ^/clients/\d+/edit$, roles: ROLE_ADMIN }
+        - { path: ^/orders, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/products, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/store, roles: ROLE_ADMIN }
+        - { path: ^/categories, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/presentation, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
-        - { path: ^/api, roles: PUBLIC_ACCESS }
+        - { path: ^/api,       roles: PUBLIC_ACCESS }
+
 when@test:
     security:
         password_hashers:
