--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.9",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
+        "guzzlehttp/guzzle": "^7.5",
         "lexik/jwt-authentication-bundle": "^2.18",
         "nelmio/cors-bundle": "^2.3",
         "nyholm/psr7": "^1.5",
@@ -86,6 +87,12 @@
         }
     },
     "require-dev": {
+        "dbrekelmans/bdi": "^1.0",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "6.2.*",
+        "symfony/css-selector": "6.2.*",
+        "symfony/panther": "^2.0",
+        "symfony/phpunit-bridge": "^6.2",
         "symfony/stopwatch": "6.2.*",
         "symfony/web-profiler-bundle": "6.2.*"
     }
